syntax = "proto3";

package scuffle.types;

// A variant is a transcoded version of the stream.
message StreamVariant {
  // The id of the variant.
  string id = 1;

  // The name of the variant.
  string name = 3;

  message VideoSettings {
    // The width of the video.
    uint32 width = 1;
    // The height of the video.
    uint32 height = 2;
    // The framerate of the video.
    uint32 framerate = 3;
    // The bitrate of the video.
    uint32 bitrate = 4;
    // The codec of the video.
    string codec = 5;
  }

  message AudioSettings {
    // The sample rate of the audio.
    uint32 sample_rate = 1;
    // The number of channels of the audio.
    uint32 channels = 2;
    // The bitrate of the audio.
    uint32 bitrate = 3;
    // The codec of the audio.
    string codec = 4;
  }

  // The video settings of the variant. (If the variant is audio-only, this will
  // be empty.)
  optional VideoSettings video_settings = 4;
  // The audio settings of the variant.
  optional AudioSettings audio_settings = 5;

  // The metadata of the variant. (This is a JSON string.)
  string metadata = 6;
}
